# SH_SCADA

./: go.mod  go.sum  main.go  scada.db
Hmi/: .gitignore  CMakeLists.txt  HMI.qmlproject
Hmi/antui/: FramelessCombox.qml  FramelessLineEdit.qml  IconButton.qml
Hmi/resource/: resource.qrc
Hmi/src/: CMakeLists.txt  devicelistmodel.cpp  devicelistmodel.h  main.cpp  thememgr.cpp  thememgr.h  usermgr.hpp
Hmi/src/common/: common.h
Hmi/src/qml/: Login.qml  MainWindow.qml  Navigation.qml  SidebarMenu.qml  TopFrame.qml
common/db/: db.go
common/model/: model.go
plat/: devices_manage.go  driver.go  event_bus.go  system_timer.go  task_manage.go
serives/: auth.go  rest_api.go  ws_server.go
vue-project/: package-lock.json  package.json
vue-project/src/: App.vue  main.js
vue-project/src/views/: EditableTable.vue  LoginPage.vue
